# collector

./: config.py  pyproject.toml
collectioners/telegram_collector/collectors/: collector.py
config/: settings.json
manage/telegram/: __main__.py  telegram_bot.py
manage/telegram/states/: __init__.py  channel_states.py
