[tool.poetry]
name = "telegram_collect"
version = "0.1.0"
description = ""
authors = ["Dutt Eleonora"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
aiogram = "^2.19"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
